--- a/source/form.html
+++ b/source/form.html
@@ -91,7 +91,7 @@
               <div class="contest__item"><label class="contest__label-item" for="surname">Фамилия:</label>
                 <input class="contest__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию *"></div>
               <div class="contest__item contest__item--name"><label class="contest__label-item" for="name">Имя:</label>
-                <input class="contest__input" type="text" name="name" id="name" placeholder="Введите ваше имя *"></div>
+                <input class="contest__input contest__input--name" type="text" name="name" id="name" placeholder="Введите ваше имя *"></div>
               <div class="contest__item"><label class="contest__label-item" for="middle-name">Отчество:</label>
                 <input class="contest__input" type="text" name="middle-name" id="middle-name" placeholder="Ну и отчество тоже *"></div>
             </div>
