--- a/source/index.html
+++ b/source/index.html
@@ -136,12 +136,12 @@
         </svg>
         <ul class="features__list container">
           <li class="features__item features__item--mood">
-            <h4 class="features__name">Поднимает настроение</h4>
-            <p class="features__info">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            <h4 class="features__name features__name--mood">Поднимает настроение</h4>
+            <p class="features__info features__info--mood">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
           </li>
           <li class="features__item features__item--change">
             <h4 class="features__name features__name--change">Меняет мир вокруг</h4>
-            <p class="features__info features__info--change">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            <p class="features__info features__info--change">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
           </li>
           <li class="features__item features__item--friends">
             <h4 class="features__name">Заводит новых друзей</h4>
@@ -151,12 +151,11 @@
       </div>
     </section>
     <section class="page-main__analysis analysis">
-      <div class="analysis__item">
+      <div class="analysis__item container">
         <div class="analysis__item--wrapper">
-          <h3 class="analysis__name">Эффект &nbsp; на 24 часа!</h3>
+          <h3 class="analysis__name">Эффект&nbsp;на 24 часа!</h3>
           <p class="analysis__description">Британские ученые провели исследования и
-            доказали,
-            что положительный эффект &nbsp; от использования приложения длится целые сутки!</p>
+            доказали,&nbsp;что положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           <a class="analysis__link" href="#">Узнать больше об исследовании</a>
         </div>
         <svg class="analysis__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="298" height="345" viewBox="0 0 298 345">
@@ -185,19 +184,16 @@
           фотографии!»
         </p>
       </blockquote>
-      <!-- <div class="comment__sliders-wrapper">
-        <input class="visually-hidden comment__sliders-button comment__sliders-button--active" type="radio" name="slider" value="comment1-radio" id="comment1-radio" checked>
-        <input class="visually-hidden comment__sliders-button" type="radio" name="slider" value="comment2-radio" id="comment2-radio">
-        <input class="visually-hidden comment__sliders-button" type="radio" name="slider" value="comment3-radio" id="comment3-radio">
-        <div class="comment__sliders-arrows">
-          <label for="comment1-radio" class="comment__sliders-arrow-left comment__sliders-arrow"><span class="visually-hidden">Предыдущий</span></label>
-          <label for="comment2-radio" class="comment__sliders-arrow-right comment__sliders-arrow"><span class="visually-hidden">Следующий</span></label>
-        </div>
-        <div class="comment__sliders-circle">
-          <label for="comment1-radio" class="comment__sliders-circle-left comment__sliders-circle"><span class="visually-hidden">Первый комментарий</span></label>
-          <label for="comment2-radio" class="comment__sliders-circle-center comment__sliders-circle"><span class="visually-hidden">Второй комментарий</span></label>
-          <label for="comment2-radio" class="coment__sliders-circle-right comment__sliders-circle"><span class="visually-hidden">Третий комментарий</span></label>
-        </div> -->
+      <div class="comment__slider-arrow">
+        <button class="comment__slider-left" type="button"><span class="visually-hidden">влево</span>
+          <svg class="comment__slider-icon comment__slider-icon--left" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+            <path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z" />
+          </svg>
+        </button>
+        <button class="comment__slider-right" type="button"><span class="visually-hidden">вправо</span><svg class="comment__slider-icon comment__slider-icon--right" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+            <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z" />
+          </svg>
+        </button></div>
       <div class="comment-slider__wrapper">
         <button class="toggle toggle--active" type="button"><span class="visually-hidden">1</span></button>
         <button class="toggle" type="button"><span class="visually-hidden">2</span></button>
